--- a/company-website/src/index.css
+++ b/company-website/src/index.css
@@ -8,3 +8,14 @@ padding:0;
 box-sizing: border-box;
 overflow-y: hidden;
 }
+
+::-webkit-scrollbar{
+    width:8px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: gray;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: cornflowerblue;
+}
